Added GH homepage and scripts

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "aem-tutorial-team-app",
   "version": "0.1.0",
+  "homepage": "https://SachinMali.github.io/universal-editor-wknd-basic-tutorial",
   "private": true,
   "dependencies": {
     "@adobe/aem-headless-client-js": "^3.3.0",
@@ -20,6 +21,8 @@
     "sass": "^1.60.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
